[package]
name = "zola"
version = "0.9.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in"
homepage = "https://www.getzola.org"
repository = "https://github.com/getzola/zola"
keywords = ["static", "site", "generator", "blog"]
# build = "build.rs"
edition = "2018"

[build-dependencies]
clap = "2"

[[bin]]
name = "zola"

[dependencies]
atty = "0.2.11"
clap = "2"
chrono = "0.4"
lazy_static = "1.1.0"
toml = "0.5"
termcolor = "1.0.4"
# Used in init to ensure the url given as base_url is a valid one
url = "2"
# Below is for the serve cmd
actix-files = { version = "0.1", optional = true }
actix-web = { version = "1.0", default-features = false, features = [], optional = true }
notify = { version = "4", optional = true }
ws = { version = "0.9", optional = true }
ctrlc = { version = "3", optional = true }
open = { version = "1.2", optional = true }
globset = { version = "0.4", optional = true }

site = { path = "components/site" }
errors = { path = "components/errors" }
front_matter = { path = "components/front_matter" }
utils = { path = "components/utils" }
rebuild = { path = "components/rebuild" }

[features]
default = ["serve"]
serve = ["actix-files", "actix-web", "notify", "ws", "ctrlc", "open", "globset"]

[workspace]
members = [
    "components/config",
    "components/errors",
    "components/front_matter",
    "components/rebuild",
    "components/rendering",
    "components/site",
    "components/templates",
    "components/utils",
    "components/search",
    "components/imageproc",
    "components/link_checker",
    "components/library",
]

[profile.release]
lto = true
codegen-units = 1
