[package]
name = "zola"
version = "0.10.1"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in"
homepage = "https://www.getzola.org"
repository = "https://github.com/getzola/zola"
keywords = ["static", "site", "generator", "blog"]
# build = "build.rs"

[build-dependencies]
clap = "2"

[[bin]]
name = "zola"

[dependencies]
atty = "0.2.11"
clap = "2"
chrono = "0.4"
lazy_static = "1.1.0"
termcolor = "1.0.4"
# Used in init to ensure the url given as base_url is a valid one
url = "2"

site = { path = "components/site" }
errors = { path = "components/errors" }
front_matter = { path = "components/front_matter" }
utils = { path = "components/utils" }

[workspace]
members = [
    "components/config",
    "components/errors",
    "components/front_matter",
    "components/rendering",
    "components/site",
    "components/templates",
    "components/utils",
    "components/library",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = "abort"
